[Material][Mac] Remove NSVisualEffectView from windows with titlebars

BUG=607356

Review-Url: https://codereview.chromium.org/1974733003
Cr-Commit-Position: refs/heads/master@{#393664}

Former-commit-id: 32810807ecda6e6a65666c7ec66590b02e89167f